# forkd

./: CMakeLists.txt  README.md  bitmap.c  client.c  command.txt  forkd.c  index.html  list.c  main.c  menu_run.sh  output.txt  run.sh  run_client.sh  test_bitmap.c
client/: CMakeLists.txt  client.c
include/: args_handle.h  bitmap.h  error_handle.h  forkd.h  list.h  package.h  server.h
package/: CMakeLists.txt  package.c
server/: CMakeLists.txt  server.c
test/: test_package.c
util/: CMakeLists.txt  args_handle.c  bitmap.c  error_handle.c  list.c
